# Telegram-Shop

./: .dockerignore  .gitignore  README.md  alembic.ini  bot.py  main.py  pyproject.toml  ruff.toml  states.py
db/: db.py
functions/: cryptobot_pay.py  get_currencies.py
keyboards/: crypto_kb.py  main_kb.py  profile_kb.py  wallet_kb.py
migrations/: env.py
migrations/versions/: 2023_12_02_init_tables.py
src/: bot.py  constants.py  messages.py  states.py
src/common/: __init__.py  _bot.py  _bot_init.py  _config.py  _constants.py  _logger.py  _redis.py
src/database/: __init__.py  _database.py  _engine.py  _models.py  database.py  shop.db
src/handlers/: __init__.py  _catalog.py  _menu.py  _payment.py  _profile.py  catalog.py  menu.py  payment.py  profile.py
src/keyboards/: __init__.py  _catalog_kb.py  _menu_kb.py  _payment_kb.py  _profile_kb.py  callback_kb.py  menu_kb.py  wallet_kb.py
src/utils/: crypto_pay.py  cryptobot_pay.py  formaters.py  formatters.py  get_currencies.py  messages.py
tests/utils/: test_formatters.py
