[tool.poetry]
name = "telegram-shop"
version = "0.1.0"
description = ""
authors = ["Kkkasum"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.2.0"
loguru = "^0.7.2"
pydantic-settings = "^2.1.0"
asyncpg = "^0.29.0"
alembic = "^1.12.1"
sqlalchemy = "^2.0.23"
greenlet = "^3.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
