[tool.poetry]
name = "telegram-shop"
version = "0.1.0"
description = ""
authors = ["Kkkasum"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.2.0"
loguru = "^0.7.2"
pydantic-settings = "^2.1.0"
asyncpg = "^0.29.0"
alembic = "^1.12.1"
sqlalchemy = "^2.0.23"
greenlet = "^3.0.1"
pytest = "^7.4.3"
aiocryptopay = "^0.3.5"
pytest-asyncio = "^0.23.2"
redis = "^5.0.1"


[tool.pytest.ini_options]
pythonpath = [
    ".", "src",
]
asyncio-mode = "auto"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
